[DSC-593] changes for import external preview modal fix header, footer and scrollable body with truncatable abstract

--- a/src/app/submission/import-external/import-external-preview/submission-import-external-preview.component.scss
+++ b/src/app/submission/import-external/import-external-preview/submission-import-external-preview.component.scss
@@ -1,3 +1,7 @@
 .close:focus {
   outline: none !important;
 }
+.scrollable-body {
+  height: 65vh;
+  overflow: auto;
+}
